[package]
name = "hurl"
version = "0.1.0"
authors = ["Tom Johnell <tjohnell@handy.com>"]
edition = "2018"

[features]
default = ["yaml"]

[dependencies]
curl = "0.4.23"
serde_yaml = "0.8.9"
base64 = "0.10.1"
openssl = "0.10.24"
data-encoding = "2.1.2"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[dependencies.yaml]
optional = true
